[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-localhost = "2"
serde = { workspace = true }
serde_json = { workspace = true }
argus-wing = { path = "../../argus-wing" }
argus-protocol = { path = "../../argus-protocol" }
argus-tool = { path = "../../argus-tool" }
async-graphql = "7"
once_cell = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
